--- a/src/style.css
+++ b/src/style.css
@@ -619,8 +619,9 @@ html, body, #root {
   display: flex
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mb-7 {
@@ -633,6 +634,10 @@ html, body, #root {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
@@ -651,6 +656,10 @@ html, body, #root {
   height: 1.5rem;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .w-60 {
   width: 15rem;
 }
@@ -661,6 +670,10 @@ html, body, #root {
 
 .flex-auto {
   flex: 1 1 auto;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .flex-col {
@@ -680,12 +693,16 @@ html, body, #root {
           column-gap: 1rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border-t {
@@ -697,17 +714,12 @@ html, body, #root {
   border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 
-.border-opacity-10 {
-  --tw-border-opacity: 0.1;
-}
-
 .border-opacity-5 {
   --tw-border-opacity: 0.05;
 }
 
-.bg-active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(40, 40, 40, var(--tw-bg-opacity));
+.border-opacity-10 {
+  --tw-border-opacity: 0.1;
 }
 
 .bg-footer {
@@ -715,14 +727,19 @@ html, body, #root {
   background-color: rgba(24, 24, 24, var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-black {
+.bg-active {
   --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+  background-color: rgba(40, 40, 40, var(--tw-bg-opacity));
 }
 
 .bg-opacity-70 {
@@ -733,32 +750,23 @@ html, body, #root {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
-.from-blue-300 {
-  --tw-gradient-from: #93c5fd;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(147, 197, 253, 0));
-}
-
 .from-indigo-600 {
   --tw-gradient-from: #4f46e5;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(79, 70, 229, 0));
-}
-
-.to-indigo-600 {
-  --tw-gradient-to: #4f46e5;
 }
 
 .to-blue-300 {
   --tw-gradient-to: #93c5fd;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-2 {
@@ -771,9 +779,13 @@ html, body, #root {
   padding-right: 1rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-sm {
@@ -781,13 +793,12 @@ html, body, #root {
   line-height: 1.25rem;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-s {
+  font-size: 0.813rem;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-link {
@@ -800,9 +811,9 @@ html, body, #root {
   color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
 
-.text-green-700 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgba(4, 120, 87, var(--tw-text-opacity));
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .text-green-400 {
@@ -817,14 +828,6 @@ html, body, #root {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-
-.hover\:opacity-100:hover {
-  opacity: 1;
-}
-
-.group:hover .group-hover\:bg-opacity-10 {
-  --tw-bg-opacity: 0.1;
 }
 
 .group:hover .group-hover\:bg-opacity-100 {
